k8s/addons/observability/overlays/do-private/ingress-grafana-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-public
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana-do-osdu.esstar.com.vn
    secretName: cf-origin-grafana-tls
  rules:
  - host: grafana-do-osdu.esstar.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kps-grafana
            port:
              number: 80
